@@ -2,19 +2,16 @@ package org.avni.server.importer.batch.csv.writer.header;
 
 import org.avni.server.application.*;
 import org.avni.server.common.AbstractControllerIntegrationTest;
+import org.avni.server.config.InvalidConfigurationException;
 import org.avni.server.dao.AddressLevelTypeRepository;
 import org.avni.server.dao.application.FormMappingRepository;
-import org.avni.server.domain.Account;
-import org.avni.server.domain.Organisation;
-import org.avni.server.domain.SubjectType;
-import org.avni.server.domain.UserContext;
-import org.avni.server.domain.factory.TestAccountBuilder;
-import org.avni.server.domain.factory.TestOrganisationBuilder;
-import org.avni.server.domain.factory.UserContextBuilder;
+import org.avni.server.domain.*;
+import org.avni.server.domain.factory.*;
 import org.avni.server.domain.factory.metadata.FormMappingBuilder;
 import org.avni.server.domain.factory.metadata.TestFormBuilder;
 import org.avni.server.domain.metadata.SubjectTypeBuilder;
 import org.avni.server.framework.security.UserContextHolder;
+import org.avni.server.service.AddressLevelService;
 import org.avni.server.service.ImportService;
 import org.avni.server.service.OrganisationConfigService;
 import org.junit.Before;
@@ -24,55 +21,41 @@ import org.mockito.Mock;
 import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.when;
+import static org.mockito.MockitoAnnotations.initMocks;
 
-public class SubjectHeadersCreatorUnitTest extends AbstractControllerIntegrationTest {
-    @Mock
-    private ImportService importService;
-
+public class SubjectHeadersCreatorUnitTest {
     @Mock
     private OrganisationConfigService organisationConfigService;
-
     @Mock
     private AddressLevelTypeRepository addressLevelTypeRepository;
+    @Mock
+    private AddressLevelService addressLevelService;
 
     @Mock
     private FormMappingRepository formMappingRepository;
 
     private SubjectHeadersCreator subjectHeadersCreator;
-    private FormMapping formMapping;
-    private SubjectType subjectType;
+    private AddressLevelType village;
+    private AddressLevelType district;
 
     @Before
     public void setUp() {
+        initMocks(this);
+
         Account account = new TestAccountBuilder().withRegion("IN").build();
         Organisation organisation = new TestOrganisationBuilder().withAccount(account).build();
         UserContext userContext = new UserContextBuilder().withOrganisation(organisation).build();
         UserContextHolder.create(userContext);
 
-        when(organisationConfigService.getSettingsByKey(KeyType.customRegistrationLocations.toString())).thenReturn(Collections.emptyList());
-        when(addressLevelTypeRepository.getAllNames()).thenReturn(List.of("Village", "District"));
-
-        subjectType = new SubjectTypeBuilder()
-                .setName("TestSubject")
-                .setType(Subject.Individual)
-                .setUuid(UUID.randomUUID().toString())
-                .build();
-
-        formMapping = createFormMapping(subjectType);
-        when(formMappingRepository.findBySubjectTypeAndFormFormTypeAndIsVoidedFalse(subjectType, FormType.IndividualProfile))
-                .thenReturn(Collections.singletonList(formMapping));
-
-        List<FieldDescriptor> strategyList = Arrays.asList(
-                new CodedFieldDescriptor(),
-                new DateFieldDescriptor(),
-                new TextFieldDescriptor(),
-                new NumericFieldDescriptor()
-        );
+        district = new AddressLevelTypeBuilder().name("District").build();
+        village = new AddressLevelTypeBuilder().withUuid(UUID.randomUUID()).name("Village").parent(district).build();
+        when(addressLevelTypeRepository.getAllParentNames(village.getUuid())).thenReturn(List.of(village.getName(), district.getName()));
 
         subjectHeadersCreator = new SubjectHeadersCreator(
-                organisationConfigService,
-                addressLevelTypeRepository
+                addressLevelTypeRepository,
+                addressLevelService
         );
     }
 
@@ -88,29 +71,46 @@ public class SubjectHeadersCreatorUnitTest extends AbstractControllerIntegration
     }
 
     @Test
-    public void testBasicHeaderGeneration() {
+    public void testBasicHeaderGeneration() throws InvalidConfigurationException {
+        SubjectType subjectType = new SubjectTypeBuilder()
+                .setId(1l)
+                .setName("TestSubject")
+                .setType(Subject.Individual)
+                .setUuid(UUID.randomUUID().toString())
+                .build();
+        FormMapping formMapping = createFormMapping(subjectType);
+        when(formMappingRepository.findBySubjectTypeAndFormFormTypeAndIsVoidedFalse(subjectType, FormType.IndividualProfile))
+                .thenReturn(Collections.singletonList(formMapping));
+        when(addressLevelService.getRegistrationLocationType(subjectType)).thenReturn(village);
+
         String[] headers = subjectHeadersCreator.getAllHeaders(formMapping, null);
-        assertNotNull(headers);
-        assertTrue(headers.length > 0);
         assertTrue(containsHeader(headers, SubjectHeadersCreator.id));
         assertTrue(containsHeader(headers, SubjectHeadersCreator.registrationDate));
         assertTrue(containsHeader(headers, SubjectHeadersCreator.firstName));
         assertTrue(containsHeader(headers, SubjectHeadersCreator.registrationLocation));
         assertTrue(containsHeader(headers, "Village"), "Should include default address level types");
         assertTrue(containsHeader(headers, "District"), "Should include default address level types");
+
+        String[] descriptions = subjectHeadersCreator.getAllDescriptions(formMapping, null);
+        assertNotNull(descriptions);
+        assertEquals(subjectHeadersCreator.getAllHeaders(formMapping, null).length, descriptions.length);
     }
 
     @Test
-    public void testPersonSubjectTypeHeaders() {
-        SubjectType personType = new SubjectTypeBuilder()
+    public void testPersonSubjectTypeHeaders() throws InvalidConfigurationException {
+        SubjectType subjectType = new SubjectTypeBuilder()
+                .setId(1l)
                 .setName("TestPerson")
                 .setType(Subject.Person)
                 .setAllowProfilePicture(true)
                 .setUuid(UUID.randomUUID().toString())
                 .build();
-        FormMapping personMapping = createFormMapping(personType);
+        FormMapping formMapping = createFormMapping(subjectType);
+        when(formMappingRepository.findBySubjectTypeAndFormFormTypeAndIsVoidedFalse(subjectType, FormType.IndividualProfile))
+                .thenReturn(Collections.singletonList(formMapping));
+        when(addressLevelService.getRegistrationLocationType(subjectType)).thenReturn(village);
 
-        String[] headers = subjectHeadersCreator.getAllHeaders(personMapping, null);
+        String[] headers = subjectHeadersCreator.getAllHeaders(formMapping, null);
         assertTrue(containsHeader(headers, SubjectHeadersCreator.firstName));
         assertTrue(containsHeader(headers, SubjectHeadersCreator.lastName));
         assertTrue(containsHeader(headers, SubjectHeadersCreator.dateOfBirth));
@@ -120,16 +120,20 @@ public class SubjectHeadersCreatorUnitTest extends AbstractControllerIntegration
     }
 
     @Test
-    public void testHouseholdSubjectTypeHeaders() {
-        SubjectType householdType = new SubjectTypeBuilder()
+    public void testHouseholdSubjectTypeHeaders() throws InvalidConfigurationException {
+        SubjectType subjectType = new SubjectTypeBuilder()
+                .setId(1l)
                 .setName("Household")
                 .setType(Subject.Household)
                 .setHousehold(true)
                 .setUuid(UUID.randomUUID().toString())
                 .build();
-        FormMapping householdMapping = createFormMapping(householdType);
+        FormMapping formMapping = createFormMapping(subjectType);
+        when(formMappingRepository.findBySubjectTypeAndFormFormTypeAndIsVoidedFalse(subjectType, FormType.IndividualProfile))
+                .thenReturn(Collections.singletonList(formMapping));
+        when(addressLevelService.getRegistrationLocationType(subjectType)).thenReturn(village);
 
-        String[] headers = subjectHeadersCreator.getAllHeaders(householdMapping, null);
+        String[] headers = subjectHeadersCreator.getAllHeaders(formMapping, null);
         assertTrue(containsHeader(headers, SubjectHeadersCreator.firstName));
         assertTrue(containsHeader(headers, SubjectHeadersCreator.profilePicture));
         assertTrue(containsHeader(headers, SubjectHeadersCreator.totalMembers));
@@ -138,89 +142,40 @@ public class SubjectHeadersCreatorUnitTest extends AbstractControllerIntegration
     }
 
     @Test
-    public void testMultipleSubjectTypesForForm() {
-        SubjectType anotherSubjectType = new SubjectTypeBuilder()
-                .setName("AnotherSubject")
-                .setType(Subject.Individual)
+    public void testAddressFieldsWithCustomRegistrationLocationsAtDistrict() throws InvalidConfigurationException {
+        SubjectType subjectType = new SubjectTypeBuilder()
+                .setId(1l)
+                .setName("Household")
+                .setType(Subject.Household)
+                .setHousehold(true)
                 .setUuid(UUID.randomUUID().toString())
                 .build();
-
-        FormMapping anotherMapping = createFormMapping(anotherSubjectType);
-        anotherMapping.setForm(formMapping.getForm());
-        when(formMappingRepository.findBySubjectTypeAndFormFormTypeAndIsVoidedFalse(anotherSubjectType, FormType.IndividualProfile))
-                .thenReturn(List.of(formMapping,anotherMapping));
-        when(formMappingRepository.getSubjectTypesMappedToAForm(formMapping.getFormUuid())).thenReturn(List.of(subjectType,anotherSubjectType));
-        String[] headers = subjectHeadersCreator.getAllHeaders(formMapping, null);
-        assertTrue(containsHeader(headers, SubjectHeadersCreator.subjectTypeHeader));
-    }
-
-    @Test
-    public void testAddressFieldsWithCustomRegistrationLocationsAtVillage() {
-        String villageUuid = UUID.randomUUID().toString();
-        when(organisationConfigService.getSettingsByKey(KeyType.customRegistrationLocations.toString())).thenReturn(
-                Collections.singletonList(
-                        Map.of(
-                                "subjectTypeUUID", subjectType.getUuid(),
-                                "locationTypeUUIDs", List.of(villageUuid)
-                        )
-                )
-        );
-        when(addressLevelTypeRepository.getAllParentNames(villageUuid)).thenReturn(List.of("Village", "District"));
-
-        String[] headers = subjectHeadersCreator.getAllHeaders(formMapping, null);
-        assertTrue(containsHeader(headers, "Village"), "Should include Village as custom location");
-        assertTrue(containsHeader(headers, "District"), "Should include District as it’s parent of Village");
-    }
-
-    @Test
-    public void testAddressFieldsWithCustomRegistrationLocationsAtDistrict() {
-        String districtUuid = UUID.randomUUID().toString();
-        when(organisationConfigService.getSettingsByKey(KeyType.customRegistrationLocations.toString())).thenReturn(
-                Collections.singletonList(
-                        Map.of(
-                                "subjectTypeUUID", subjectType.getUuid(),
-                                "locationTypeUUIDs", List.of(districtUuid)
-                        )
-                )
-        );
-        when(addressLevelTypeRepository.getAllParentNames(districtUuid)).thenReturn(List.of("District"));
+        FormMapping formMapping = createFormMapping(subjectType);
+        when(formMappingRepository.findBySubjectTypeAndFormFormTypeAndIsVoidedFalse(subjectType, FormType.IndividualProfile))
+                .thenReturn(Collections.singletonList(formMapping));
+        when(addressLevelService.getRegistrationLocationType(subjectType)).thenReturn(district);
+        when(addressLevelTypeRepository.getAllParentNames(district.getUuid())).thenReturn(List.of(district.getName()));
 
         String[] headers = subjectHeadersCreator.getAllHeaders(formMapping, null);
         assertTrue(containsHeader(headers, "District"), "Should include District as custom location");
         assertFalse(containsHeader(headers, "Village"), "Should exclude Village as it’s child of District");
     }
 
-    @Test
-    public void testAddressFieldsWithCustomRegistrationLocationsForDifferentSubjectType() {
-        String districtUuid = UUID.randomUUID().toString();
-        when(organisationConfigService.getSettingsByKey(KeyType.customRegistrationLocations.toString())).thenReturn(
-                Collections.singletonList(
-                        Map.of(
-                                "subjectTypeUUID", subjectType.getUuid() + "x",
-                                "locationTypeUUIDs", List.of(districtUuid)
-                        )
-                )
-        );
-        when(addressLevelTypeRepository.getAllParentNames(districtUuid)).thenReturn(List.of("District"));
+    @Test(expected = InvalidConfigurationException.class)
+    public void testAddressFieldsWithoutCustomRegistrationLocations() throws InvalidConfigurationException {
+        SubjectType subjectType = new SubjectTypeBuilder()
+                .setId(1l)
+                .setName("Household")
+                .setType(Subject.Household)
+                .setHousehold(true)
+                .setUuid(UUID.randomUUID().toString())
+                .build();
+        FormMapping formMapping = createFormMapping(subjectType);
 
-        String[] headers = subjectHeadersCreator.getAllHeaders(formMapping, null);
-        assertTrue(containsHeader(headers, "Village"), "Should include default address level types subjectTypeUUID doesn’t match");
-        assertTrue(containsHeader(headers, "District"), "Should include default address level types subjectTypeUUID doesn’t match");
-    }
-
-    @Test
-    public void testAddressFieldsWithoutCustomRegistrationLocations() {
-        when(organisationConfigService.getSettingsByKey(KeyType.customRegistrationLocations.toString())).thenReturn(Collections.emptyList());
-        String[] headers = subjectHeadersCreator.getAllHeaders(formMapping, null);
-        assertTrue(containsHeader(headers, "Village"), "Should include address level types");
-        assertTrue(containsHeader(headers, "District"), "Should include address level types");
-    }
-
-    @Test
-    public void testDescriptionsGeneration() {
-        String[] descriptions = subjectHeadersCreator.getAllDescriptions(formMapping, null);
-        assertNotNull(descriptions);
-        assertEquals(subjectHeadersCreator.getAllHeaders(formMapping, null).length, descriptions.length);
+        when(formMappingRepository.findBySubjectTypeAndFormFormTypeAndIsVoidedFalse(subjectType, FormType.IndividualProfile))
+                .thenReturn(Collections.singletonList(formMapping));
+        when(addressLevelService.getRegistrationLocationType(subjectType)).thenReturn(null);
+        subjectHeadersCreator.getAllHeaders(formMapping, null);
     }
 
     private boolean containsHeader(String[] headers, String headerToFind) {
